# advent-of-code-2017

./: .gitignore  .travis.yml  LICENSE  README.md  day.sh  pyproject.toml  test.sh
day01-inverse-captcha/: run.py
day07-recursive-circus/: run.py
day09-stream-processing/: run.py
day1-inverse-captcha/: run.py
day10-knot-hash/: run.py
day11-hex-ed/: run.py
day12-digital-plumber/: run.py
day13-packet-scanners/: run.py
day14-disk-fragmentation/: run.py
day15-dueling-generators/: run.py
day16-permutation-promenade/: run.py
day17-spinlock/: run.py
day18-duet/: run.py  test.py
day19-a-series-of-tubes/: input  run.py
day2-corruption-checksum/: run.py
day20-particle-swarm/: run.py
day21-fractal-art/: run.py
day22-sporifica-virus/: run.py
day25-the-halting-problem/: run.py
day3-spiral-memory/: run.py
day4-high-entropy-passphrases/: run.py
day5-maze-of-twisty-trampolines/: run.py
day6-memory-reallocation/: run.py
day7-recursive-circus/: run.py
day8-i-heard-you-like-registers/: run.py
day9-stream-processing/: run.py
